--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
             </div>
             
             <div class="activity-item">
-                <h3>🦾 ZJU & ZJH (Zhejiang Humanoid Robot Innovation Center) – Wheeled Humanoid Perception & Navigation System</h3>
+                <h3>🦾 ZJU & Zhejiang Humanoid Robot Innovation Center – Wheeled Humanoid Perception & Navigation System</h3>
                 <p>
                     Developed the perception and navigation subsystem for a wheeled humanoid robot platform. Built a vision-centric BEV representation from multi-camera inputs to generate dense costmaps and 3-DoF pose estimates. Integrated the perception layer with A* global planning and TEB local optimization, enabling reliable, obstacle-aware visual navigation for the humanoid robot's wheeled base.
                 </p>
@@ -753,10 +753,10 @@
                     <strong>全国一等奖&队长</strong> - 第二十三届中国机器人及人工智能大赛 无人驾驶挑战赛 & 深度学习智能车（双赛项）
                 </div>
                 <div class="award-item">
-                    <strong>省赛一等奖&队长</strong> - 2021"西门子杯"中国智能制造挑战赛 离散行业自动化
+                    <strong>省赛一等奖&队长</strong> - 第十五届“西门子杯”中国智能制造挑战赛 离散行业自动化
                 </div>
                 <div class="award-item">
-                    <strong>冠军&队长</strong> - 2021"微派·种子杯"创新性软件编程PK赛
+                    <strong>冠军&队长</strong> - 武汉市2021年"微派·种子杯"创新性软件编程PK赛
                 </div>
                 <div class="award-item">
                     <strong>冠军&队长</strong> - 华中科技大学第十四届瑞萨杯智能车大赛
